--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
     "@types/node": "^12.19.16",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
-    "history": "^4.10.1",
+    "history": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
+    "react-hook-form": "^6.15.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^6.0.0-alpha.2",
     "react-scripts": "4.0.2",
+    "redux": "^4.0.5",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.16",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
