--- a/QandA/appsettings.json
+++ b/QandA/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=MRSPANGLER\\SQLEXPRESS;Database=QandA; Trusted_Connection=True;"
+  },
 }
