--- a/QandA/appsettings.json
+++ b/QandA/appsettings.json
@@ -6,8 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Auth0": {
+    "Authority": "https://petespangler.us.auth0.com/",
+    "Audience": "https://qanda"
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MRSPANGLER\\SQLEXPRESS;Database=QandA; Trusted_Connection=True;"
+    "DefaultConnection": "Server=SpangDevPC\\SQLEXPRESS;Database=QandA; Trusted_Connection=True;"
   },
+  "Frontend": "http://localhost:3000"
 }
