--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,11 +1,14 @@
 {
-    "extends": ["react-app", "plugin:prettier/recommended"],
-    "rules": {
-        "prettier/prettier": [
-            "error",
-            {
-                "endOfLine": "auto"
-            }
-        ]
-    }
+  "extends": ["react-app", "plugin:prettier/recommended"],
+  "rules": {
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  },
+  "globals": {
+    "cy": true
+  }
 }
