backend and frontend integrated

--- a/QandA/appsettings.json
+++ b/QandA/appsettings.json
@@ -6,13 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AllowedHosts": "*",
   "Auth0": {
     "Authority": "https://petespangler.us.auth0.com/",
     "Audience": "https://qanda"
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=SpangDevPC\\SQLEXPRESS;Database=QandA; Trusted_Connection=True;"
-  },
-  "Frontend": "http://localhost:3000"
+  "Frontend": "https://qandatest2001.azurewebsites.net"
 }
